--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,130 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:background="#534948"
+    android:padding="0dp"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
-    <!-- Горизонтальные балансы -->
-    <LinearLayout
-        android:id="@+id/top_balances"
+    <RelativeLayout
+        android:id="@+id/topPanel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true">
-
-        <TextView
-            android:id="@+id/tvBalanceCart"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        android:layout_height="70dp"
+        android:background="#FFD700"
+        android:clipChildren="false"
+        android:clipToPadding="false">
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Карта: - BYN"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp">
 
-        <TextView
-            android:id="@+id/tvBalanceCash"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Наличные: - BYN"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/balanceContainer"
+                android:layout_width="190dp"
+                android:layout_height="70dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="#FFFFFF"
+                android:layout_marginEnd="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?attr/selectableItemBackground">
 
-    <!-- Список транзакций -->
+                <TextView
+                    android:id="@+id/tvBalanceTotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.0"
+                    android:textSize="25sp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:textColor="#534948"
+                    android:textStyle="bold" />
+
+        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/currencyContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="#FFFFFF">
+
+                <TextView
+                    android:id="@+id/textCurrency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BYN"
+                    android:textSize="25sp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textColor="#534948"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/lvTransactions"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/top_balances"
-        android:layout_above="@+id/button"
-        android:layout_marginTop="8dp" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/topPanel"
+        android:layout_above="@+id/bottomNav"
+        android:divider="#FFD700"
+        android:dividerHeight="1dp"
+        android:padding="12dp" />
 
-    <!-- Кнопка фиксированная внизу -->
-    <Button
-        android:id="@+id/button"
+    <RelativeLayout
+        android:id="@+id/bottomNav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Добавить"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="8dp" />
+        android:background="#FFD700"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:clipChildren="false"
+        android:clipToPadding="false">
+
+        <ImageView
+            android:id="@+id/ic_line_chart"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_convert"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:padding="8dp" />
+
+        <ImageView
+            android:id="@+id/ic_pie_static"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/ic_static"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:padding="8dp" />
+    </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/buttonAdd"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/ic_add"
+        android:background="@drawable/ic_add"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@id/bottomNav"
+        android:layout_marginTop="-25dp"
+        android:elevation="6dp"
+        android:scaleType="centerInside" />
 </RelativeLayout>
