--- a/app/src/main/res/layout/balance_menu.xml
+++ b/app/src/main/res/layout/balance_menu.xml
@@ -1,4 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4A3F3D"
@@ -7,15 +10,18 @@
 
     <LinearLayout
         android:id="@+id/topBar"
+        android:clipChildren="false"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
         android:background="#FFD131"
-        android:clipChildren="false"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Левая секция с весом 2 -->
         <LinearLayout
+            android:id="@+id/backButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -23,7 +29,9 @@
             android:background="#FFD131">
 
             <ImageView
-                android:id="@+id/backButton"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ic_back" />
@@ -34,54 +42,168 @@
             android:layout_height="match_parent"
             android:background="#4A3F3D" />
 
-        <!-- Центральная секция с весом 3 -->
         <LinearLayout
             android:id="@+id/centerSection"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="center"
-            android:background="#FFD131" />
+            android:background="#FFD131"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/currency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BYN"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_gravity="center" />
+        </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="#4A3F3D" />
 
-        <!-- Правая секция с фиксированной шириной -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="center"
-            android:background="#FFD131" />
-    </LinearLayout>
+            android:background="#FFD131">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="БАЛАНС"
+                android:textColor="#FFFFFF"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                android:layout_gravity="center" />
+        </LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/mailIcon"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
         android:src="@drawable/ic_tipe"
         android:background="@android:color/white"
-        android:layout_marginTop="50dp"
-        android:elevation="6dp"
-        android:padding="4dp"
-        android:visibility="invisible"/>
-
-    <!-- Полоски под верхней панелью -->
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/topBar"
+        app:layout_constraintStart_toStartOf="@+id/topBar"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintEnd_toEndOf="@+id/topBar"
+        android:layout_marginBottom="-20dp"
+        android:layout_marginLeft="20dp"/>
     <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp" android:layout_below="@id/topBar"
+    android:orientation="vertical"
+    app:layout_constraintTop_toBottomOf="@+id/topBar"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/topBar"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1" android:background="#534948">
 
-        <View android:layout_width="match_parent" android:layout_height="125dp" android:background="#4A3F3D" />
-        <View android:layout_width="match_parent" android:layout_height="100dp" android:background="#FFD131" />
-        <View android:layout_width="match_parent" android:layout_height="125dp" android:background="#4A3F3D" />
-        <View android:layout_width="match_parent" android:layout_height="100dp" android:background="#FFD131" />
-        <View android:layout_width="match_parent" android:layout_height="125dp" android:background="#4A3F3D" />
-        <View android:layout_width="match_parent" android:layout_height="100dp" android:background="#FFD131" />
-    </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="НАЛИЧКА"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
 
-</RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#FFD131">
+
+        <TextView
+            android:id="@+id/tvBalanceCashB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textColor="#534948"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#534948">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="НА КАРТЕ"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#FFD131">
+
+        <TextView
+            android:id="@+id/tvBalanceCartB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textColor="#534948"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#534948">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ОБЩИЙ"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#FFD131">
+
+        <TextView
+            android:id="@+id/tvBalanceTotalB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textColor="#534948"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
