--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,22 +95,22 @@
         android:clipChildren="false"
         android:clipToPadding="false">
 
-        <ImageView
-            android:id="@+id/ic_line_chart"
+        <ImageButton
+            android:id="@+id/btnConvector"
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="55dp"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/ic_convert"
+            android:background="@drawable/ic_convert"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
             android:padding="8dp" />
 
-        <ImageView
-            android:id="@+id/ic_pie_static"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+        <ImageButton
+            android:id="@+id/btnStatic"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="20dp"
-            android:src="@drawable/ic_static"
+            android:background="@drawable/ic_static"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:padding="8dp" />
