--- a/app/src/main/res/layout/list_item_transaction.xml
+++ b/app/src/main/res/layout/list_item_transaction.xml
@@ -36,7 +36,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="#FFD700" /> </LinearLayout>
+                android:textColor="#FFD700" />
+
+            <TextView
+                android:id="@+id/tvTransactionDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="#CCCCCC"
+                android:paddingTop="2dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:layout_marginStart="4dp"
+                android:fontFamily="sans-serif-medium"
+                />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvTransactionAmount"
